Bug 115720 - migrated ("network.proxy.type", 3) fails to connect r=darin, sr=dveditz